Final alignment fix for header logo

--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,7 @@ img {
   display: block;
   margin-right: -4px;
   position: relative;
-  top: 1px;
+  top: -1px;
 }
 
 .brand-text {
